// =============================================================
// PROJECT MODULE — Projects, tasks, team, allocations, audit
// Render: https://dbdiagram.io (Import → From DBML)
// =============================================================

Project project_module {
  database_type: 'MySQL'
  Note: '''
  Project management domain. Includes projects, tasks, subtasks,
  comments, team membership (with permissions & allocation),
  time-boxed resource allocations, activity log and notifications.
  '''
}

// --- Stub of users for FK visualisation only (real definition in user-module) ---
Table users {
  id bigint [pk]
  Note: 'STUB — full definition in user-module.dbml'
}

// --- Core ---

Table projects {
  id bigint [pk, increment]
  owner_id bigint [ref: > users.id]
  name varchar
  status varchar [note: 'planning / active / completed / ...']
  workload varchar [note: 'low / medium / high']
  start_date date
  end_date date
  progress integer [default: 0, note: '0–100 %']
  tasks_total integer [default: 0]
  tasks_completed integer [default: 0]
  deleted_at timestamp [null]
  Note: 'Aggregate root. Soft-deletes. owner_id = single project owner (separate from team).'
}

Table tasks {
  id bigint [pk, increment]
  project_id bigint [ref: > projects.id]
  assigned_to bigint [ref: > users.id, null]
  title varchar
  status varchar [note: 'todo / in_progress / testing / done']
  priority varchar [note: 'low / medium / high']
  estimated_hours decimal [null]
  actual_hours decimal [default: 0]
  due_date date [null]
  deleted_at timestamp [null]
  Note: 'Soft-deletes enabled.'
}

Table subtasks {
  id bigint [pk, increment]
  task_id bigint [ref: > tasks.id]
  title varchar
  is_completed boolean [default: false]
  sort_order integer [default: 0]
}

Table comments {
  id bigint [pk, increment]
  task_id bigint [ref: > tasks.id]
  user_id bigint [ref: > users.id]
  body text
}

// --- Pivots with extra data ---

Table project_team {
  id bigint [pk, increment]
  project_id bigint [ref: > projects.id]
  user_id bigint [ref: > users.id]
  permissions json [note: 'Project-scoped permissions']
  allocation integer [note: '0–100 %']
  hourly_rate decimal [null]

  indexes {
    (project_id, user_id) [unique]
  }
  Note: 'Team membership (N:M with extras).'
}

Table project_allocations {
  id bigint [pk, increment]
  project_id bigint [ref: > projects.id]
  user_id bigint [ref: > users.id]
  allocated_hours decimal
  used_hours decimal [default: 0]
  percentage integer
  start_date date
  end_date date

  indexes {
    (project_id, user_id, start_date, end_date) [unique]
  }
  Note: 'Time-boxed resource plan. used_hours updated from time_entries.'
}

Table assigned_users {
  id bigint [pk, increment]
  task_id bigint [ref: > tasks.id]
  user_id bigint [ref: > users.id]

  indexes {
    (task_id, user_id) [unique]
  }
  Note: 'Simple M:N pivot: task ↔ users.'
}

// --- Audit & notifications ---

Table activity_log {
  id bigint [pk, increment]
  project_id bigint [ref: > projects.id]
  user_id bigint [ref: > users.id]
  type varchar
  description varchar [null]
  subject_type varchar [null]
  subject_id bigint [null]
  metadata json [null]
  Note: 'Polymorphic subject (subject_type/subject_id) — no hard FK.'
}

Table notifications {
  id char(36) [pk, note: 'UUID']
  type varchar
  notifiable_type varchar
  notifiable_id bigint
  data text
  read_at timestamp [null]
  Note: 'Laravel notifications. Polymorphic on users — no hard FK.'
}

TableGroup project_module [color: #e74c3c] {
  projects
  tasks
  subtasks
  comments
  project_team
  project_allocations
  assigned_users
  activity_log
  notifications
}

TableGroup ref [color: #bdc3c7] {
  users
}
